--- a/MASH-dev/BiyonkaLiang/clusterScript.ipynb
+++ b/MASH-dev/BiyonkaLiang/clusterScript.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -27,7 +27,7 @@
      "data": {
       "image/png": "iVBORw0KGgoAAAANSUhEUgAAAeEAAAFCCAYAAADGwmVOAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDIuMS4wLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvpW3flQAAEu5JREFUeJzt3Gts3fV9x/Hv8QVSSKJyWdPglJUh\nDYxSpN3KWjSJCbblQmk3rdPWjTigBQaKQrJEGmurDW1dO42GBCVpRRkUQrZmSJ2qKoPAVpaRDrK2\nCFqSmDDoWuLUgrKyuqR242OfPaAOJ8GOb+ec3//yej21H3x9ju2P3/aRK7VarRYAQMu1pT4AAMrK\nCANAIkYYABIxwgCQiBEGgESMMAAkYoQBIBEjDACJGGEASMQIA0AiRhgAEjHCAJCIEQaARIwwACRi\nhAEgESMMAIkYYQBIxAgDQCJGGAASMcIAkIgRBoBEjDAAJGKEASARIwwAiRhhAEjECANAIkYYABIx\nwgCQiBEGgESMMJTEqlWr4pJLLom5c+fGOeecE8uWLYsDBw6kPgtKrVKr1WqpjwCar1KpxHsvuywu\nuKg7vrrnsTjy0kvR1dUVL7zwQsyZMyf1eVBKRhhK4qHH/iOq77ooarVa9B8+HDdddVlERPzbV/fF\nlZdflvg6KCe/joYSGB4djeq7LorqaC1GahHV4WMREdHW1haHY05UR0cTXwjlZIShBPoGhmLsl16D\nR4/G1j9fGxERH7juxjjrZ94RfQNDKc+D0jLCUAI/+smxGKlFDLz2v3Hbyg/HoWeeiqs+/Idx7YaP\nx0gt4kfHqqlPhFIywlBwhw4diq13bIzDLzwfH/uDD8YLzz4Tv71qddz017dHpVKJoaNH457Pbo0j\nR46kPhVKxwuzoKBGRkZi8+bN8dGPfjTaOjvjbWfMjde+/3Kce15XXHbV0uPv994rfys+dVNPdLa3\nx5133hkrV66MSqWS8HIoDyMMBXTo0KFYuXJl7Nu3LyIienp64v777x/3fT+5cVM88e9fiV27dkVE\nxNKlS+Puu++Orq6ult0LZWWEoUDq6/fYsWOxYMGCuOeee2L58uUREVEdHY0lv/dH8c7z3x2f+IuP\nx6L5c6KjrS1qtVrs2LEjVq9eHQMDAzFv3jxVDC1ghKEgxqvfTZs2xVlnnXXC+42N6nhf+v39/XHD\nDTeoYmgRL8yCnBsZGYmNGzfGpZdeGvv27YsFCxbErl274r777nvLAE9m4cKF8eUvfzm2b98e8+fP\nj4cffji6u7vj85///LijDcyOEoYcm2r91jtVCddTxdB8ShhyqJH1OxFVDM2nhCFnZlK/9aZawvVU\nMTSHEoacaEX9TkQVQ3MoYciB2dZvvZmUcD1VDI2jhCHDUtbvRFQxNI4ShoxqZP3Wm20J11PFMDtK\nGDImi/U7EVUMs6OEIUOaVb/1GlnC9VQxTJ8ShgzIU/1ORBXD9ClhSKwV9VuvWSVcTxXD1ChhSKQI\n9TsRVQxTo4QhgVbXb71WlHA9VQwTU8LQQkWu34moYpiYEoYWSVm/9VpdwvVUMZxICUOTlbF+J6KK\n4URKGJooK/VbL2UJ11PFoIShKdTv5FQxKGFouCzWb72slHA9VUxZKWFoEPU7c6qYslLC0ABZr996\nWSzheqqYMjHCMEvbt2+PVatWxbFjx2LBggVxzz33xPLly1OfNaGsj3DEG7ft2LEjVq9eHQMDAzFv\n3rzYuXNnLFu2LPVp0FB+HQ2zMDg4GHv37o3h4eHo6emJ3t7eTA9wXlQqlbj22mvjueeei6uvvjqG\nhobi8ccfj2q1mvo0aCglDDP0xBNPxM6dO2PDhg0xODgYF110UeqTpiQPJVyvVqvF888/H6Ojo/GZ\nz3wmbrzxxli8eHHqs6AhjDBM0+DgYNx+++2xaNGiuO66646PWl7kbYTrjYyMxNatW6NarcYtt9wS\nHR0dqU+CWTHCMA319Xv++eenPmdG8jzCY3p7e1UxhWCEYQryXr/1ijDCEaqYYjDCMIki1G+9oozw\nGFVMnhlhmECR6rde0UY4QhWTX0YYxlG0+q1XxBEeo4rJGyMMdYpav/WKPMIRqph8McLwU0Wu33pF\nH+Exqpg8MMKUXhnqt15ZRjhCFZN9RphSe/LJJ2Pnzp2xfv36QtdvvTKN8BhVTFYZYUppcHAwPv3p\nT0dXV1cp6rdeGUc44o0q3rZtW1Sr1VizZo0qJhOMMKVTxvqtV9YRHqOKyRIjTGmUuX7rlX2EI1Qx\n2WGEKYWy1289I/wmVUxqRphCU79vZYRPpIpJyQhTWOp3fEZ4fKqYFIwwhaN+T80IT0wV02pGmEJR\nv5MzwpNTxbSKEaYQ1O/UGeGpUcW0ghEm99Tv9Bjh6VHFNJMRJrfU78wY4elTxTSLESaX1O/MGeGZ\nU8U0mhEmV9Tv7Bnh2VHFNJIRJjfUb2MY4cZQxTSCESbz1G9jGeHGUcXMlhEm09Rv4xnhxlPFzJQR\nJpPUb/MY4eZQxcyEESZz1G9zGeHmUsVMhxEmM9Rv61xxxRWxZ8+e1GcUlipmqnxmkAnqlyJpb2+P\nNWvWRG9vb6xbt04VMyElTFLqNw0l3DqqmFPx2UAy6pcyUMWcihKm5dRveko4DVXMyXwG0FLqlzJT\nxZxMCdMS6jdblHB6qpgIJUwLqF94K1VMhBKmidRvdinhbFHF5eWZpinUL0ydKi4vJUxDqd98UMLZ\npYrLxbNLw6hfmD1VXC5KmFlTv/mjhPNBFRefZ5RZUb/QPKq4+JQwM6J+800J548qLibPItOmfqH1\nVHExKWGmTP0WhxLON1VcHJ45pkT9Qnao4uJQwpyS+i0mJVwcqjjfPFtMSP1C9qnifFPCvIX6LT4l\nXEyqOH88Q5xA/UJ+qeL8UcJEhPotGyVcfKo4HzwrqF8oIFWcD0q4xNRveSnhclHF2eWZKCn1C+Wh\nirNLCZeM+iVCCZeZKs4Wj36JqF9AFWeLEi4B9cvJlDARqjgLPOIFp36Biaji9JRwQalfTkUJczJV\nnIZHuYDULzBdqjgNJVwg6pepUsKciipuHY9sQahfoFFUceso4ZxTv8yEEmaqVHFzeTRzTP0CzaaK\nm0sJ55D6ZbaUMDOhihvPI5gz6hdIRRU3nhLOCfVLIylhZksVN4ZHLQfUL5A1qrgxlHCGqV+aRQnT\nSKp45jxSGaV+gbxQxTOnhDNG/dIKSphmUcXT49HJEPUL5J0qnh4lnAHql1ZTwrSCKp6cRyQx9QsU\nlSqenBJORP2SkhKm1VTx+DwKCahfoGxU8fiUcAupX7JCCZOSKn5TeT/yFlO/AG9QxW9Swk2mfski\nJUxWlL2Ky/XRtpj6BTi1slexEm4C9UvWKWGyqIxVXPyPsMXUL8DMlLGKlXCDqF/yRAmTdWWp4rbU\nB+RFT09PdHV1xemnnx7nnntuLFmyJJ5++umIeKN+b7311ujp6Ynrr7/eAAPM0lgVL126NNatWxf7\n9+8//rbNmzfHpZdeGu3t7VGpVOK2225Ld+gsFfNHiyb4zne/G7/0vsvjbXPnxdf/c2888sgjcfDg\nwVi1alV0dXXF5s2bjS9Ag3V3d8fmzZtj27Zt8eijj8aaNWviqaeeirPOPjsWdi2KI4dfiteGhmN4\ndDQ62/LXlUZ4Cl798bFYf/fOqNVqMVKLuOzgt2L97yyJvr6++MhHPhIXXnhh6hMBCuvkvxWvufVj\n0X/a2+NvbloZRw6/FC8fHYqHX3wl3t91dpx7xmmpz50WIzyJ4dHReOLID6I6WouHdtwbfS/+dzz7\n5N6IiPjQ9TfFz15wQeILAcqhu7s7br/jjtj1fH+0jdZi7AVNtVpEdbQWTxz5QSy78B3RkaMiNsKT\n6BsYirHXru175F/iwNefjIiIc965MC7+xV+OvoGhePfbz0h5IkBp9B8djs7OzhgZ5yXFtVotd9+T\n8/PjQiJHh6vHn+y/euCL8YVvfjv+bNu98dorL8ff3XJDHHrxxbQHApRI/ffkk43UIl4frrb2oFky\nwpM4s7Mjqj8ZjJGRkYiIOO30OfELv/brMeeMM2OkWo0ffK8v8YUA5XFmZ0e0T/Aa2PZKxNzOfP2C\nN1/XJrBo/pz4x289Exv/9Oa45FcuizPnvz16n/qv+PHrP4r5Z58TLz13IEaW/Wa0t7enPhWg8BbN\nnxMbt302Dnzja/E/B5+NiIivfWV3vHKkL973G0ti+Z/0JL5wepTwJDrb2uKq9/x8dF3wc/GtJ/bG\nY1/8Qhz94Q/j8qUfiF27/zWWL10Sa9eujd7e3tSnAhReZ1tbvNr7zdjzpQfj1f7vRUTEd547GHu+\n9GBUj3w7Vy/KivAfs6asOjoafQND8fpwNeZ2dsSi+XOOP9nVajW2bNkSbW1tsXr1alVM5vmPWeTd\nqb4n54kRbqD9+/fHXXfdFTfffHN0d3enPgcmZIQhG/L3Y0OGLV68ODZt2hS7d++OO++88/iLuQBg\nPEa4wTo6OmLdunVx5ZVX+lsxAKdkhJtEFQMwGSPcRKoYgFMxwi2gigEYjxFuEVUMwMmMcIupYgDG\nGOEEVDEAEUY4KVUMUG5GODFVDFBeRjgjVDFA+RjhDFHFAOVihDNIFQOUgxHOKFUMUHxGOONUMUBx\nGeEcUMUAxWSEc0QVAxSLEc4ZVQxQHEY4p1QxQP4Z4RxTxQD5ZoQLQBUD5JMRLghVDJA/RrhgVDFA\nfhjhAlLFAPlghAtMFQNkmxEuOFUMkF1GuCRUMUD2GOESUcUA2WKES0gVA2SDES4pVQyQnhEuOVUM\nkI4RRhUDJGKEOU4VA7SWEeYEqhigdYww41LFAM1nhJmQKgZoLiPMpFQxQHMYYaZEFQM0nhFmWlQx\nQOMYYaZNFQM0hhFmxlQxwOwYYWZFFQPMnBGmIVQxwPQZYRpGFQNMjxGm4VQxwNQYYZpCFQNMzgjT\nVKoYYGJGmKZTxQDjM8K0jCoGOJERpqVUMcCbjDBJqGIAI0xCqhgoOyNMcqoYKKtKrVarpT4Cxuzf\nvz/uuuuuuPnmm6O7uzv1OYVUqVQiIsKXPqRnhMmcarUaW7Zsiba2tli9enW0t7enPqlQjDBkhxEm\ns1RxcxhhyA4jTKap4sYzwpAdRphcUMWNY4QhO4wwuaGKG8MIQ3YYYXJHFc+OEYbsMMLkkiqeOSMM\n2WGEyTVVPH1GGLLDCJN7qnh6jDBkhxGmMFTx1BhhyA4jTKGo4skZYcgOI0whqeKJGWHIDiNMYani\n8RlhyA4jTOGp4hMZYcgOI0wpqOI3GWHIDiNMqahiIwxZYoQpnbJXsRGG7DDClFZZq9gIQ3YYYUqt\njFVshCE7jDBEuarYCEN2GGH4qbJUsRGG7DDCcJKiV7ERhuwwwjCOIlexEYbsMMJwCkWsYiMM2WGE\nYRJFq2IjDNlhhGGKilLFRhiywwjDNBShio0wZIcRhhnIcxUbYcgOIwwzNFbFtVot+vr6YsOGDXHe\neeelPmtSRhiyoy31AZBXHR0dsW7dujh8+HBs2rQpuru744EHHjBuwJQZYZil9evXx5IlS2JgYCBW\nrFgR11xzTfT396c+C8gBIwyztGjRonjooYfi3nvvjXnz5sWuXbvi4osvVsXApPxNGBqor68vVq1a\nFbt3746IiKuvvjo+97nPxcKFCxNf9iZ/E4bsUMLQQKoYmA4lDE2S1SpWwpAdShiaRBUDk1HC0AJZ\nqmIlDNmhhKEFVDEwHiUMLZa6ipUwZIcShhZTxcAYJQwJpahiJQzZoYQhIVUM5aaEISNaVcVKGLJD\nCUNGqGIoHyUMGdTMKlbCkB1KGDJIFUM5KGHIuEZXsRKG7FDCkHGqGIpLCUOONKKKlTBkhxKGHFHF\nUCxKGHJqplWshCE7lDDklCqG/FPCUADTqWIlDNmhhKEAVDHkkxGGgqhUKnHdddfFwYMHY8mSJTEw\nMBArVqyIa665Jvr7+8d9/0qlEmvXrk1wLRBhhKFwTlXFx0ZG4vJlH4rTTp8THR0dqU+F0jPCUEDj\nVfEnN2+NLz77nfi/778c73jX+fGrv7ksIiIGh0cSXwvl5UdhKLCxKr5v+wNx2nveF4/+04449MxT\n8bcP7opd9/99RET0Hx2K6uhodLT5mRxazVcdFFylUokrPvi78eqRw/EPd3wqfn/Nhrige/Hxt9dq\nEX0DQwkvhPIywlACR4er8eSjD0V1+Fgc+Pq++OSNK+LZfXsjIuJrjz0an/jLjye+EMrJr6OhBM7s\n7IiIWtRqtXj68cdOeNsrfS/F/qe+keYwKDn/rANKYHh0NB5+8ZWojr755b7l1rWx50sPxgd6/jj+\n+d67/E0YEvBVByXQ2dYW7+86OzraKtH+xj/Mip/+46xYeOYcAwyJKGEokeroaPQNDMXrw9WY29kR\ni+YbYEjJCANAIn4EBoBEjDAAJGKEASARIwwAiRhhAEjECANAIkYYABIxwgCQiBEGgESMMAAkYoQB\nIBEjDACJGGEASMQIA0AiRhgAEjHCAJCIEQaARIwwACRihAEgESMMAIkYYQBIxAgDQCJGGAASMcIA\nkIgRBoBEjDAAJGKEASARIwwAiRhhAEjECANAIkYYABIxwgCQiBEGgESMMAAkYoQBIBEjDACJGGEA\nSMQIA0AiRhgAEjHCAJCIEQaARIwwACRihAEgkf8Hh0pa7dviAWsAAAAASUVORK5CYII=\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x1512108080>"
+       "<matplotlib.figure.Figure at 0x151774e4a8>"
       ]
      },
      "metadata": {},
@@ -78,8 +78,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#get the communities\n",
@@ -88,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +105,7 @@
        "        [ 0.0006,  0.0006,  0.0006, ...,  0.0006,  0.0006,  0.0006]])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,8 +118,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
-   "metadata": {},
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#I timed each of these (calculating in transitions and out transitions separately vs all together). \n",
@@ -149,41 +153,46 @@
     "    #np.ix_ allows easier subsetting by creating n-d meshgrid for the matrix\n",
     "    ixgrid = np.ix_(community)\n",
     "    m = matrix[ixgrid, :]\n",
-    "    comm_transitions = m.sum()\n",
+    "    comm_out_transitions = m.sum()\n",
+    "    \n",
+    "    m_in = matrix[:, ixgrid]\n",
+    "    comm_in_transitions = m_in.sum()\n",
     "    \n",
     "    #sums entries of square matrix that represents all transitions within the community only\n",
     "    ixgrid_c = np.ix_(community, community)\n",
     "    m_c = matrix[ixgrid_c]\n",
-    "    in_transition = m_c.sum()\n",
+    "    within_transition = m_c.sum()\n",
     "    \n",
     "    #subtract total community transitions from within community transitions\n",
-    "    out_transition = comm_transitions - in_transition\n",
+    "    out_transition = comm_out_transitions - within_transition\n",
+    "    in_transition = comm_in_transitions - within_transition\n",
     "    \n",
-    "    ratio = in_transition/(out_transition+in_transition)\n",
+    "    ratio = in_transition/out_transition\n",
     "    return (in_transition, out_transition, ratio)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(8, 3, 0.72727272727272729)"
+       "(7, 2, 3.5)"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "testm = np.matrix([[0, 1, 0, 0],\n",
-    "           [1, 0, 0, 2],\n",
-    "           [1, 0, 1, 0],\n",
-    "           [1, 2, 0, 3]])\n",
+    "                   [1, 0, 0, 2],\n",
+    "                   [1, 0, 1, 0],\n",
+    "                   [0, 2, 0, 3],\n",
+    "                  [0, 1, 2, 3]])\n",
     "\n",
     "testcomm = [1, 2, 3]\n",
     "\n",
