Updates to the User's Guide

--- a/MASH-dev/DavidSmith/MBITES-Supplement/MBITES-UsersGuide.tex
+++ b/MASH-dev/DavidSmith/MBITES-Supplement/MBITES-UsersGuide.tex
@@ -193,18 +193,35 @@ This document is structured around \demo\; and \minmod. The following sub-sectio
 The task for MBITES was how to represent a mosquito in a simulation model that accurately mimics what mosquitoes do in real life. In the model, each mosquito is represented as a set of variables representing its state, including quantitative or categorial variables that track where a mosquito is, its physiological status, behavioral intent, and etc. The list of variables is the following: 
 %
 \begin{itemize}
-\item Unique identifier. For bookkeeping, pedigrees and inheritance.
-\item Behavioral state. What is a mosquito trying to do? Is a mosquito still alive?
-\item Location. Where is the mosquito? 
-\item Resting microsite. Where is the mosquito resting (\eg inside or outside)?
+\item A unique identifier for this mosquito, used for bookkeeping, pedigrees and inheritance.
+\item Behavioral state.
+\begin{itemize} 
+  \item Blood feed [B], lay eggs [O], mate [M], sugar feed [S], or estivate [E]
+  \item Search or Attempt. The single letter name usually refers to the attempt, but the blood feeding search is denoted [F] and the egg laying search is [L] (mainly for the MDETES equations). The other search states have not been given a single letter name, they are called [MS], [SS], or [ES]. 
+\end{itemize}
+\item Location. 
+\begin{itemize} 
+\item Where is the mosquito in space? (\ie at what site) 
+\item Resting microsite. On what kind of surface  is the mosquito resting (\eg inside wall)?
+\end{itemize}
+\item Variables describing a mosquito's condition or status
+\begin{itemize}
 \item Energy reserve levels. How much sugar does a mosquito have in reserve? 
 \item Physical condition. How much physical damage has a mosquito sustained? 
 \item Physiological condition. How much physiological damage has a mosquito sustained?
-\item Chronological age. How old is a mosquito? MBITES keeps track of the birth moment. 
-\item Reproductive age. How many egg batches has a mosquito laid (\ie parity)? 
 \item Infectious status. Is a mosquito infected or infectious with a pathogen? 
 \item Sexual maturity. Has a mosquito mated? 
-\item Type. What is a mosquito's genotype / phenotype for insecticide resistance, genetic modification, and for dealing with evolutionary problems? 
+\end{itemize}
+\item Variables describing a mosquito's age
+\begin{itemize}
+\item Chronological age. How old is a mosquito? MBITES keeps track of the birth moment. 
+\item Reproductive age. How many egg batches has a mosquito laid (\ie parity)? 
+\end{itemize}
+\item Type. 
+\begin{itemize}
+\item What is a mosquito's genotype / phenotype for insecticide resistance, genetic modification, and for dealing with evolutionary problems?
+\item What is the type of the male mosquitoes with which a female has mated?
+\end{itemize}
 \end{itemize}
 These states change as a mosquito ages and goes through its activities. 
 
@@ -241,7 +258,7 @@ Every mosquito event can be logged so it is possible to study mosquitoes using  
 
 \subsection{Options}
 
-Some bouts are required, and others are optional. The core bouts are \Fbout, \Bbout, \Rbout, \Lbout, and \Obout\; must all be in place to run MBITES at all, but the optional states \Sbout, \Mbout, and \Ebout\; can be turned on and utilized, if it suits the problem at hand. \demo uses all the states, except for estivation.  In \minmod, only the core bouts are used; the others must be turned on and configured. 
+Some bouts are required, and others are optional. The core bouts are \Fbout, \Bbout, \Rbout, \Lbout, and \Obout\; must all be in place to run MBITES at all, but the optional states \Sbout, \Mbout, and \Ebout\; can be turned on and utilized, if it suits the problem at hand. \demo\; uses all the states, except for estivation.  In \minmod, only the core bouts are used; the others must be turned on and configured. 
 
 
 \subsection{Implementation Notes}
