--- a/MASH-dev/SeanWu/MBITES-Diagrams/diagrams.tex
+++ b/MASH-dev/SeanWu/MBITES-Diagrams/diagrams.tex
@@ -1,4 +1,4 @@
-\documentclass[12pt]{minimal}
+\documentclass[12pt]{article}
 
 % load packages
 \usepackage{pgf}
@@ -59,9 +59,15 @@
            text centered,
            align = center
       },
+      dot/.style={
+      	    circle,
+	    fill=black,
+	    draw=none
+      },
 }
 
 % begin oneBout structure
+\begin{figure}
 \begin{tikzpicture}[->,>=stealth',thick]
 
 % begin nodes
@@ -73,7 +79,7 @@
 	\inlinecode{R}{tNow <- tNext}
 };
 
-\node[decision, below of = TIMING, node distance = 2.5cm] (SEARCH) {
+\node[decision, below of = TIMING, node distance = 3cm] (SEARCH) {
 	Search?
 };
 
@@ -81,7 +87,7 @@
 	Attempt?
 };
 
-\node[state, right of = SEARCH, node distance = 5cm] (ATTEMPTSEARCH) {
+\node[state, right of = SEARCH, node distance = 5cm] (ATTEMPTSS) {
 	\textbf{Attempt Search} \\
 	\inlinecode{R}{self\$attempt_search()}	
 };
@@ -106,6 +112,8 @@
 	\inlinecode{R}{self\$attempt_S()}	
 };
 
+\node[dot,position=5:7.5cm from ATTEMPT] (DOT) {};
+
 
 % end nodes
 
@@ -113,6 +121,8 @@
 \draw (ENTER) to node [right] {} (TIMING);
 \draw (TIMING) to node [left] {\inlinecode{R}{private\$search = TRUE}} (SEARCH);
 \draw (SEARCH) to node [left] {\inlinecode{R}{private\$search = FALSE}} (ATTEMPT);
+
+\draw (SEARCH) edge (ATTEMPTSS);
 
 \draw (ATTEMPT) edge [bend left=30] (ATTEMPTB);
 \draw (ATTEMPT) edge [bend left=15] (ATTEMPTO);
@@ -122,7 +132,8 @@
 
 % end oneBout structure
 \end{tikzpicture}
-
+\caption{Structure of control flow in oneBout} \label{fig:1}
+\end{figure}
 
 % close document
 \end{document}
