--- a/MASH-dev/SeanWu/MBITES-Diagrams/diagrams.tex
+++ b/MASH-dev/SeanWu/MBITES-Diagrams/diagrams.tex
@@ -66,7 +66,11 @@
       },
 }
 
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % begin oneBout structure
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 \begin{figure}
 \begin{tikzpicture}[->,>=stealth',thick]
 
@@ -130,10 +134,30 @@
 \draw (ATTEMPT) edge [bend right=15] (ATTEMPTS);
 % end path
 
-% end oneBout structure
 \end{tikzpicture}
 \caption{Structure of control flow in oneBout} \label{fig:1}
 \end{figure}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% end oneBout structure
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% begin updateState structure
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\begin{figure}
+\begin{tikzpicture}[->,>=stealth',thick]
+
+\end{tikzpicture}
+\caption{Structure of control flow in updateState} \label{fig:2}
+\end{figure}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% end updateState structure
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 
 % close document
 \end{document}
